--- a/APPS/package.json
+++ b/APPS/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm install && bower install  && node server.js"
   },
   "repository": {
     "type": "git",
